// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dts > generates empty module when schema is empty 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// Generated by unplugin-typed-env. !! DO NOT MODIFY THIS FILE !!
// It's recommended to commit this file.
// Make sure to add this file to your tsconfig.json file as an "includes" or "files" entry."

declare module "virtual:typed-env" {
}
"
`;

exports[`dts > generates module with fields when schema is not empty 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// Generated by unplugin-typed-env. !! DO NOT MODIFY THIS FILE !!
// It's recommended to commit this file.
// Make sure to add this file to your tsconfig.json file as an "includes" or "files" entry."

declare module "virtual:typed-env" {
export const FIELD_NAME_1: fieldType | fieldOtherType;
export const FIELD_NAME_2: string;
}
"
`;

exports[`js > generates empty module when schema is empty 1`] = `""`;

exports[`js > generates module with parsed fields when schema is not empty 1`] = `
"export const FIELD_NAME_1 = parsedValue1;
export const FIELD_NAME_2 = parsedValue2;
"
`;
